cmake_minimum_required(VERSION 3.5)

find_package(ITK REQUIRED COMPONENTS
  ITKCommon
  ITKIOImageBase
  ${ITK_IO_MODULES_USED}
  )
include(${ITK_USE_FILE})

find_package(VTK REQUIRED COMPONENTS
  vtkCommonCore
  vtkFiltersCore
  vtkIOLegacy
  )
include(${VTK_USE_FILE})

find_package(SlicerExecutionModel REQUIRED)
include(${SlicerExecutionModel_USE_FILE})

SEMMacroBuildCLI(
  NAME polydatamerge
  EXECUTABLE_ONLY
  TARGET_LIBRARIES
    ${ITK_LIBRARIES}
    ${VTK_LIBRARIES}
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
  ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
  INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
  INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
  INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
  )

set_property(GLOBAL APPEND PROPERTY niral_utilities_LIBRARIES polydatamerge)


install( TARGETS polydatamerge 
  EXPORT niral_utilitiesTargets
  RUNTIME DESTINATION bin 
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}"
  )