cmake_minimum_required(VERSION 2.6)

project(polydatatransform)

find_package(ITK COMPONENTS
  ITKCommon
  ITKIOImageBase
  ITKImageFunction
  ITKSpatialObjects
  ITKTransform
  ${ITK_IO_MODULES_USED}
)
include(${ITK_USE_FILE})

find_package(VTK REQUIRED)
include(${VTK_USE_FILE})


find_package(SlicerExecutionModel REQUIRED)
include(${SlicerExecutionModel_USE_FILE})

include_directories(${PROJECT_SOURCE_DIR}/Library)
include_directories(${PROJECT_SOURCE_DIR})

add_subdirectory(Library)

set(LOCAL_NAME polydatatransform)
set(LOCAL_LIBRARIES 
	${ITK_LIBRARIES}
	${VTK_LIBRARIES}
  library)

SEMMacroBuildCLI(
    NAME ${LOCAL_NAME}
    ${STATIC}
    TARGET_LIBRARIES ${LOCAL_LIBRARIES}
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
    INSTALL_RUNTIME_DESTINATION ${INSTALL_RUNTIME_DESTINATION}
    INSTALL_LIBRARY_DESTINATION ${INSTALL_LIBRARY_DESTINATION}
    INSTALL_ARCHIVE_DESTINATION ${INSTALL_ARCHIVE_DESTINATION}
    )
install( TARGETS polydatatransform RUNTIME DESTINATION bin )
